--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,9 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: "TrashHand";
+  src: url("../assets/font/TrashHand.TTF");
+  font-display: swap;
+}
